# aryan-main

./: .gitignore  README.md  RELEASE_NOTES.md  components.json  index.html  jsconfig.json  package-lock.json  package.json  seed_data.sql  vite.config.js
src/: schema.sql
src/server/: Cargo.toml  tauri.conf.json
src/server/capabilities/: default.json
src/server/icons/: icon.icns
src/server/src/: bill.rs  lib.rs  master.rs  reports.rs  transaction.rs  utility.rs
src/server/src/master/: acc_day_book.rs  acc_general_Ledger.rs  acc_party_bank.rs  acc_tally_master.rs  acc_tax_master.rs  account_groups.rs  employee.rs  kitchen_stock.rs  lodge_customer_info.rs  lodge_discount_info.rs  lodge_identity.rs  lodge_market_segment.rs  lodge_plan.rs  menu.rs  messages.rs  party_ledger.rs  table.rs
src/server/src/master/account_groups/: acc_account_categories.rs  acc_account_groups.rs
src/server/src/master/employee/: acc_designation.rs  acc_employee_info.rs
src/server/src/master/kitchen_stock/: material_item_group.rs  material_item_name.rs
src/server/src/master/menu/: rest_kitchen_section.rs  rest_menu_category.rs  rest_menu_group.rs  rest_menu_main.rs  rest_menu_type.rs
src/server/src/master/messages/: rest_bill_msg.rs  rest_kot_msg.rs
src/server/src/master/party ledger/: acc_Debtor.rs  acc_creditor.rs
src/server/src/reports/: billing_reports.rs  business_reports.rs  menu_master_reports.rs  mis_reports.rs  sales_reports.rs
src/server/src/transaction/: rest_cal_insentive.rs
src/server/src/utility/: auth.rs  company_details.rs  query.rs  user_access.rs
(+205 files in other folders)
